--- a/templates/docker.j2
+++ b/templates/docker.j2
@@ -1,9 +1,9 @@
 Package: docker-ce
-Pin: version {{ docker_version }}
+Pin: version 5:{{ docker_version }}~debian.{{ ansible_distribution_major_version }}~{{ ansible_distribution_release }}
 Pin-Priority: 1000
 
 Package: docker-ce-cli
-Pin: version {{ docker_version }}
+Pin: version 5:{{ docker_version }}~debian.{{ ansible_distribution_major_version }}~{{ ansible_distribution_release }}
 Pin-Priority: 1000
 
 Package: containerd.io
